--- a/src/main/java/com/boquerontech/supermercadoboqueron/inventario/Inventario.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/inventario/Inventario.form
@@ -204,7 +204,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Eliminar Producto"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Hand Cursor"/>
+              <Color id="Cursor Por defecto"/>
             </Property>
           </Properties>
           <Constraints>
@@ -235,7 +235,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="A&#xf1;adir Producto"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Hand Cursor"/>
+              <Color id="Cursor Por defecto"/>
             </Property>
           </Properties>
           <Constraints>
@@ -251,7 +251,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Pedidos"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Hand Cursor"/>
+              <Color id="Cursor Por defecto"/>
             </Property>
           </Properties>
           <Constraints>
