--- a/src/main/java/com/boquerontech/supermercadoboqueron/login/Login.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/login/Login.form
@@ -133,7 +133,7 @@
               </Border>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Por defecto"/>
+              <Color id="Cursor de Mano"/>
             </Property>
           </Properties>
           <Events>
